--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "antd": "^5.10.0",
     "bootstrap": "^5.3.2",
     "i18next": "^23.6.0",
+    "i18next-browser-languagedetector": "^7.1.0",
+    "i18next-http-backend": "^2.2.2",
     "react": "^18.2.0",
     "react-bootstrap": "^2.9.0",
     "react-dom": "^18.2.0",
