--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-i18next": "^13.3.1",
     "react-redux": "^8.1.3",
     "react-router-dom": "^6.16.0",
+    "react-toastify": "^9.1.3",
     "redux": "^4.2.1",
     "sass": "^1.69.2"
   },
