--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "antd": "^5.10.0",
     "axios": "^1.6.2",
     "bootstrap": "^5.3.2",
+    "formik": "^2.4.5",
     "i18next": "^23.6.0",
     "i18next-browser-languagedetector": "^7.1.0",
     "i18next-http-backend": "^2.2.2",
@@ -31,7 +32,8 @@
     "react-router-dom": "^6.16.0",
     "react-toastify": "^9.1.3",
     "redux": "^4.2.1",
-    "sass": "^1.69.2"
+    "sass": "^1.69.2",
+    "yup": "^1.3.2"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
