--- a/package.json
+++ b/package.json
@@ -20,14 +20,15 @@
     "axios": "^1.6.2",
     "bootstrap": "^5.3.2",
     "formik": "^2.4.5",
-    "i18next": "^23.6.0",
+    "i18next": "^23.7.11",
     "i18next-browser-languagedetector": "^7.1.0",
     "i18next-http-backend": "^2.2.2",
     "path": "^0.12.7",
     "react": "^18.2.0",
     "react-bootstrap": "^2.9.0",
     "react-dom": "^18.2.0",
-    "react-i18next": "^13.3.1",
+    "react-hot-toast": "^2.4.1",
+    "react-i18next": "^13.5.0",
     "react-redux": "^8.1.3",
     "react-router-dom": "^6.16.0",
     "react-toastify": "^9.1.3",
